# Data_Structures

2023-2024/Homework_4/src/: CMakeLists.txt  application.cpp
2023-2024/Homework_4/src/Headers/: Definitions.h  DictionaryNode.h  File.h  HelperFunctions.h  Interface.h
2023-2024/Homework_4/src/Sources/: Dictionary.cpp
2023-2024/Structures/BinaryTree/: BinaryTree.cpp
2023-2024/Structures/Queue/: Queue.cpp
2024-2025/Algorithms/searching_algorithms/: binary_search_rec.cpp
2024-2025/Algorithms/sorting_algorithms/: insertion_sort.cpp  merge_sort.cpp
2024-2025/Exams/Preparations/: basic_parser.cpp  build_from_sorted.cpp  odd_even_sort.cpp  remove_nodes_recursion.cpp  sort_by_level_tree.cpp
2024-2025/Exams/Preparations/remove_nodes_stack/: remove_nodes_stack.cpp
2024-2025/Homewroks/HW_1/1/: 1.cpp  merge_sort_list.hpp  tab.hpp
2024-2025/Homewroks/HW_1/2/: bit_proxy.hpp  iterator.hpp  vector.hpp
2024-2025/Structures/Vector/iterator/: iterator.hpp
Algorithms/searching_algorithms/: BinarySearch.cpp  LinearSearch.cpp  binary_search_iter.cpp  linear_search_iter.cpp  linear_search_rec.cpp
Algorithms/searching_algorithms/LinearSearch/: LinearSearch.sln
Algorithms/searching_algorithms/binary_search_rec/: binary_search_rec.cpp  binary_search_rec.sln  binary_search_rec.vcxproj  binary_search_rec.vcxproj.filters
Algorithms/sorting_algorithms/: bubble_sort.cpp
Homework_4/src/Headers/: Dictionary.h  Statistics.h
Homework_4/src/Sources/: Statistics.cpp
Structures/Stack/: Stack.cpp
Structures/Vector/: vector_implementation.cpp
(+8 files in other folders)
